Reduce latency in code execution

--- a/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
+++ b/src/uLearn.Web/Views/Analytics/UserSolutions.cshtml
@@ -13,7 +13,7 @@
 	</h2>
 	@foreach (var userSolution in Model.Solutions)
 	{
-		var code = new CodeBlock(userSolution.SolutionCode.Text, Model.Slide.Exercise.Lang);
+		var code = new CodeBlock(userSolution.SolutionCode.Text, Model.Slide.Exercise.LangId);
 		<label>@userSolution.GetVerdict()</label> @userSolution.Timestamp
 		@Html.DisplayFor(m => code)
 		<hr/>
