Change name and namespace. Move tests from uLearnToEdx

--- a/src/uLearnToEdx/templates/config.xml
+++ b/src/uLearnToEdx/templates/config.xml
@@ -20,4 +20,11 @@
 	<ULearnCourseId>BasicProgramming</ULearnCourseId>
 	<!-- Path to video json -->
 	<Video>video.json</Video>
+	<IgnoredSlides>
+		<!-- ULearn slides to skip during conversion and patching	-->
+		<!--
+		<SlideId>1</SlideId>
+		<SlideId>2</SlideId>
+		-->
+	</IgnoredSlides>
 </Config>
