--- a/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
+++ b/src/uLearn.Web/Views/Account/_ChangePasswordPartial.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNet.Identity
-@model uLearn.Web.Models.ManageUserViewModel
+﻿@model ManageUserViewModel
 
 @using (Html.BeginForm("Manage", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
