--- a/src/CourseTool/templates/config.xml
+++ b/src/CourseTool/templates/config.xml
@@ -20,11 +20,11 @@
 	<ULearnCourseId>BasicProgramming</ULearnCourseId>
 	<!-- Path to video json -->
 	<Video>video.json</Video>
-	<IgnoredSlides>
+	<IgnoredUlearnSlides>
 		<!-- ULearn slides to skip during conversion and patching	-->
 		<!--
 		<SlideId>1</SlideId>
 		<SlideId>2</SlideId>
 		-->
-	</IgnoredSlides>
+	</IgnoredUlearnSlides>
 </Config>
