--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -1,8 +1,11 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using uLearn
 @using uLearn.Model.Blocks
+@using uLearn.Quizes
+@using uLearn.Web.Controllers
 @* ReSharper disable once RedundantUsingDirective *@
 @using uLearn.Web.Models
+@using System.Linq
 
 @helper Slide(BlockRenderContext context, int currentScore = 0)
 {
@@ -11,10 +14,20 @@
 			@context.Slide.Title
 			<span class="score">@Score(currentScore, context.Slide.MaxScore)</span>
 		</h1>
-
 		@foreach (var block in context.Slide.Blocks)
 		{
+			var questionBlock = block as AbstractQuestionBlock;
+			if (questionBlock != null)
+			{
+				<h4><i class="glyphicon"></i> @questionBlock.QuestionIndex. @questionBlock.Text.RenderTex()</h4>
+			}
+			
 			@Block((dynamic)block, context)
+			
+			if (questionBlock != null)
+			{
+				<hr class="quiz-block-delimiter"/>
+			}
 		}
 	</div>
 }
@@ -137,6 +150,102 @@
 				}
 			</ol>
 		</div>
+	}
+}
+
+@helper Block(ChoiceBlock block, BlockRenderContext context)
+{
+	var items = block.ShuffledItems();
+	var isMultiply = block.Multiple;
+	var typeInp = isMultiply ? "checkbox" : "radio";
+	QuizInfoModel model = context.GetBlockData(block) ?? new QuizInfoModel(new QuizModel(), block, 1, QuizState.NotPassed);
+	<div class="quiz-block-mark @typeInp" id='@(block.Id + "_quizBlock")'>
+		@for (int itemIndex = 0; itemIndex < items.Length; itemIndex++)
+		{
+			var item = items[itemIndex];
+			var id = isMultiply ? itemIndex + "noMult" : model.BlockIndex.ToString();
+			var itemChecked = model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].Contains(item.Id);
+			var ans = itemChecked ? "checked" : "";
+			var itemClass = "";
+			var title = "";
+			if (model.QuizState == QuizState.Total)
+			{
+				itemClass = item.IsCorrect ? "right-quiz" : itemChecked ? "wrong-quiz" : "";
+				title = (item.IsCorrect ? "Правильный" : "Неправильный") + " вариант";
+			}
+			<div class="quiz">
+				<label class="@itemClass" title="@title">
+					<input @ans autocomplete="off" id='@(block.Id + "quizBlock" + item.Id)' name=@("group"+id) type="@typeInp">
+					@item.Description.RenderTex()
+				</label>
+				@if (model.QuizState == QuizState.Total && !String.IsNullOrEmpty(item.Explanation))
+				{
+					<p class="text-muted">@item.Explanation</p>
+				}
+			</div>
+		}
+	</div>
+}
+
+@helper Block(FillInBlock block, BlockRenderContext context)
+{
+	var value = "";
+	var quizRes = "";
+	QuizInfoModel model = context.GetBlockData(block) ?? new QuizInfoModel(new QuizModel(), block, 1, QuizState.NotPassed);
+	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
+	{
+		value = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault();
+		quizRes = model.QuizState == QuizState.Total ? (model.QuizModel.AnswersToQuizes[block.Id][1] == "False" ? "wrong-quiz" : "right-quiz") : "";
+	}
+	var sample = block.Sample;
+	<div class="quiz quiz-block-input">
+		<label>
+			<input autocomplete="off" class="form-control @quizRes" value="@value" id='@(block.Id + "quizBlock")' maxlength="@QuizController.MAX_FILLINBLOCK_SIZE">
+		</label>
+	</div>
+	if (model.QuizState == QuizState.Total)
+	{
+		<div>Правильный ответ: @sample</div>
+		if (!String.IsNullOrEmpty(block.Explanation))
+		{
+			<div class="text-muted">@block.Explanation</div>
+		}
+	}
+}
+
+@helper Block(IsTrueBlock block, BlockRenderContext context)
+{
+	var tchecked = "";
+	var fchecked = "";
+	var trueItemClass = "";
+	var falseItemClass = "";
+	var ttitle = "";
+	var ftitle = "";
+	QuizInfoModel model = context.GetBlockData(block) ?? new QuizInfoModel(new QuizModel(), block, 1, QuizState.NotPassed);
+	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
+	{
+		var userAnswer = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() == "True";
+		tchecked = userAnswer ? "checked" : "";
+		fchecked = userAnswer ? "" : "checked";
+		if (model.QuizState == QuizState.Total)
+		{
+			trueItemClass = block.Answer ? "right-quiz" : userAnswer ? "wrong-quiz" : "";
+			falseItemClass = !block.Answer ? "right-quiz" : !userAnswer ? "wrong-quiz" : "";
+			ttitle = (block.Answer ? "Правильный" : "Неправильный") + " вариант";
+			ftitle = (!block.Answer ? "Правильный" : "Неправильный") + " вариант";
+		}
+	}
+	<div class="radio quiz-block-mark" id="@(block.Id + "_quizBlock")">
+		<div class="quiz">
+			<label class="@trueItemClass" title="@ttitle"><input autocomplete="off" @tchecked id='@(block.Id + "quizBlock" + "True")' name='@(block.Id+"group")' type="radio">Верно</label>
+		</div>
+		<div class="quiz">
+			<label class="@falseItemClass" title="@ftitle"><input autocomplete="off" @fchecked id='@(block.Id + "quizBlock" + "False")' name='@(block.Id+"group")' type="radio">Неверно</label>
+		</div>
+	</div>
+	if (model.QuizState == QuizState.Total && !String.IsNullOrEmpty(block.Explanation))
+	{
+		<div class="text-muted">@block.Explanation</div>
 	}
 }
 
