fixed RunSolutionUrl for ExerciseBlock

--- a/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
+++ b/src/uLearn.Web/Views/Course/StandaloneLayout.cshtml
@@ -1,5 +1,6 @@
 ﻿@* Generator: MvcHelper GeneratePrettyNames: true DisableLinePragmas: true *@
 @using uLearn
+@using uLearn.Model.Blocks
 @using uLearn.Web.Models
 @using uLearn.Web.Views.Course
 @using uLearn.Web.Views.SlideNavigation
@@ -23,7 +24,7 @@
 		<div class="slide-container">
 			<div class="container body-content">
 				<div class="row">
-					@SlideHtml.Slide(new BlockRenderContext(course, slide, slide.Info.SlideFile.Directory.FullName, slide.Blocks.Select(b => (dynamic)null).ToArray()))
+					@SlideHtml.Slide(new BlockRenderContext(course, slide, slide.Info.SlideFile.Directory.FullName, slide.Blocks.Select(b => b is ExerciseBlock ? new ExerciseBlockData() {RunSolutionUrl = "/" + slide.Index.ToString("000") + ".html?query=submit"} : (dynamic)null).ToArray()))
 				</div>
 			</div>
 		</div>
