--- a/src/uLearn.Web/Views/Course/SlideHtml.cshtml
+++ b/src/uLearn.Web/Views/Course/SlideHtml.cshtml
@@ -171,7 +171,7 @@
 			var ans = itemChecked ? "checked" : "";
 			var itemClass = "";
 			var title = "";
-			if (model.QuizState == QuizState.Total || model.QuizState == QuizState.Debug)
+			if (model.QuizState == QuizState.Total)
 			{
 				itemClass = item.IsCorrect ? "right-quiz" : itemChecked ? "wrong-quiz" : "";
 				title = (item.IsCorrect ? "Правильный" : "Неправильный") + " вариант";
@@ -181,11 +181,11 @@
 					<input @ans autocomplete="off" id='@(block.Id + "quizBlock" + item.Id)' name=@("group"+id) type="@typeInp">
 					@item.Description.RenderTex()
 				</label>
-				@if (model.QuizState == QuizState.Debug && item.IsCorrect)
+				@if (model.QuizState == QuizState.Total && item.IsCorrect)
 				{
-					<i class="glyphicon glyphicon-ok" style="color: green"></i>
+					<i class="glyphicon glyphicon-ok" style="color: green" title="@title"></i>
 				}
-				@if ((model.QuizState == QuizState.Debug || model.QuizState == QuizState.Total) && !String.IsNullOrEmpty(item.Explanation))
+				@if (model.QuizState == QuizState.Total && !String.IsNullOrEmpty(item.Explanation))
 				{
 					<p class="text-muted">@item.Explanation</p>
 				}
@@ -202,7 +202,7 @@
 	if (model.QuizState != QuizState.NotPassed && model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() != null)
 	{
 		value = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault();
-		quizRes = (model.QuizState == QuizState.Total || model.QuizState == QuizState.Debug) 
+		quizRes = (model.QuizState == QuizState.Total) 
 			? (model.QuizModel.AnswersToQuizes[block.Id][1] == "False" ? "wrong-quiz" : "right-quiz") : "";
 	}
 	var sample = block.Sample;
@@ -211,7 +211,7 @@
 			<input autocomplete="off" class="form-control @quizRes" value="@value" id='@(block.Id + "quizBlock")' maxlength="@QuizController.MAX_FILLINBLOCK_SIZE">
 		</label>
 	</div>
-	if (model.QuizState == QuizState.Total || model.QuizState == QuizState.Debug)
+	if (model.QuizState == QuizState.Total)
 	{
 		<div>Правильный ответ: @sample</div>
 		if (!String.IsNullOrEmpty(block.Explanation))
@@ -235,13 +235,13 @@
 		var userAnswer = model.QuizModel.AnswersToQuizes[block.Id].FirstOrDefault() == "True";
 		tchecked = userAnswer ? "checked" : "";
 		fchecked = userAnswer ? "" : "checked";
-		if (model.QuizState == QuizState.Total || model.QuizState == QuizState.Debug)
+		if (model.QuizState == QuizState.Total)
 		{
 			trueItemClass = block.Answer ? "right-quiz" : userAnswer ? "wrong-quiz" : "";
 			falseItemClass = !block.Answer ? "right-quiz" : !userAnswer ? "wrong-quiz" : "";
 		}
 	}
-	if (model.QuizState == QuizState.Total || model.QuizState == QuizState.Debug)
+	if (model.QuizState == QuizState.Total)
 	{
 		ttitle = (block.Answer ? "Правильный" : "Неправильный") + " вариант";
 		ftitle = (!block.Answer ? "Правильный" : "Неправильный") + " вариант";
@@ -249,20 +249,20 @@
 	<div class="radio quiz-block-mark" id="@(block.Id + "_quizBlock")">
 		<div class="quiz">
 			<label class="@trueItemClass" title="@ttitle"><input autocomplete="off" @tchecked id='@(block.Id + "quizBlock" + "True")' name='@(block.Id+"group")' type="radio">Верно</label>
-			@if (model.QuizState == QuizState.Debug && block.Answer)
+			@if (model.QuizState == QuizState.Total && block.Answer)
 			{
-				<i class="glyphicon glyphicon-ok" style="color: green"></i>
+				<i class="glyphicon glyphicon-ok" style="color: green" title="@ttitle"></i>
 			}
 		</div>
 		<div class="quiz">
 			<label class="@falseItemClass" title="@ftitle"><input autocomplete="off" @fchecked id='@(block.Id + "quizBlock" + "False")' name='@(block.Id+"group")' type="radio">Неверно</label>
-			@if (model.QuizState == QuizState.Debug && !block.Answer)
+			@if (model.QuizState == QuizState.Total && !block.Answer)
 			{
-				<i class="glyphicon glyphicon-ok" style="color: green"></i>
+				<i class="glyphicon glyphicon-ok" style="color: green" title="@ftitle"></i>
 			}
 		</div>
 	</div>
-	if ((model.QuizState == QuizState.Debug || model.QuizState == QuizState.Total) && !String.IsNullOrEmpty(block.Explanation))
+	if (model.QuizState == QuizState.Total && !String.IsNullOrEmpty(block.Explanation))
 	{
 		<div class="text-muted">@block.Explanation</div>
 	}
